--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -87,6 +87,8 @@
     <string name="bluetooth_empty_list_user_restricted" msgid="909734990821975673">"У вас няма дазволу на змяненне налад Bluetooth."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Спалучыць новую прыладу"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Спалучыць справа"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Спалучыць злева"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Спалучыце для іншага вуха"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Падключаны слыхавы апарат для левага вуха.\n\nКаб спалучыць апарат для правага вуха, уключыце яго."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Падключаны слыхавы апарат для правага вуха.\n\nКаб спалучыць апарат для левага вуха, уключыце яго."</string>
@@ -2823,8 +2825,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Некаторыя функцыі могуць быць абмежаваныя"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Павышанае выкарыстанне зараду"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Паглядзіце, якія праграмы найбольш спажываюць зарад"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Зарадка часова абмежавана"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Для эканоміі зараду акумулятара. Даведайцеся больш."</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Узнавіць зарадку"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Каб павялічыць тэрмін службы акумулятара, у пэўных абставінах, напрыклад пры працяглай зарадцы ва ўмовах высокай тэмпературы, узровень зараду можа быць абмежаваны <xliff:g id="PERCENT">%1$s</xliff:g>.\n\nКалі абставіны зменяцца, тэлефон аўтаматычна пяройдзе ў звычайны рэжым зарадкі."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Каб павялічыць тэрмін службы акумулятара, у пэўных абставінах, напрыклад пры працяглай зарадцы ва ўмовах высокай тэмпературы, узровень зараду можа быць абмежаваны <xliff:g id="PERCENT">%1$s</xliff:g>.\n\nКалі абставіны зменяцца, планшэт аўтаматычна пяройдзе ў звычайны рэжым зарадкі."</string>
@@ -2870,6 +2876,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Гэта праграма будзе спажываць зарад акумулятара ў фонавым рэжыме. Зарад можа скончыцца хутчэй, чым звычайна."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Зняць"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Скасаваць"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Вашы праграмы спажываюць нармальную колькасць зараду акумулятара. Калі выкарыстанне зараду павысіцца, вы атрымаеце адпаведныя рэкамендацыі.\n\nВы заўсёды можаце ўключыць рэжым эканоміі зараду."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Вашы праграмы спажываюць нармальную колькасць зараду акумулятара. Калі выкарыстанне зараду павысіцца, вы атрымаеце адпаведныя рэкамендацыі.\n\nВы заўсёды можаце ўключыць рэжым эканоміі зараду."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Вашы праграмы спажываюць нармальную колькасць зараду акумулятара. Калі выкарыстанне зараду павысіцца, вы атрымаеце адпаведныя рэкамендацыі.\n\nВы заўсёды можаце ўключыць рэжым эканоміі зараду."</string>
@@ -3051,8 +3059,11 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"пры ўзроўні зараду акумулятара <xliff:g id="PERCENT">%1$s</xliff:g>"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"Працэнт зараду акумулятара"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"Паказваць працэнт зараду акумулятара на панэлі стану"</string>
+    <string name="battery_usage_chart_graph_hint_last_full_charge" msgid="6570336408060566877">"Узровень зарадкі акумулятара з моманту апошняй поўнай зарадкі"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Узровень зараду акумулятара за апошнія 24 гадз"</string>
+    <string name="battery_app_usage" msgid="8976453608783133770">"Выкарыстанне праграм з моманту апошняй поўнай зарадкі"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Выкарыстанне праграмай зараду за апошнія 24 гадз"</string>
+    <string name="battery_system_usage" msgid="1395943945140097585">"Выкарыстанне сістэмы з моманту апошняй поўнай зарадкі"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"Выкарыстанне сістэмай зараду за апошнія 24 гадз"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"Выкарыстанне сістэмай за <xliff:g id="SLOT">%s</xliff:g>"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"Выкарыстанне праграмай за <xliff:g id="SLOT">%s</xliff:g>"</string>
