--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -85,6 +85,8 @@
     <string name="bluetooth_empty_list_user_restricted" msgid="909734990821975673">"No tens permís per canviar la configuració del Bluetooth."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Vincula un dispositiu nou"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"Bluetooth"</string>
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Vincula la dreta"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Vincula l\'esquerra"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Vincula l\'altra orella"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"L\'audiòfon esquerre està connectat.\n\nPer vincular el dret, comprova que estigui encès i a punt per vincular-se."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"L\'audiòfon dret està connectat.\n\nPer vincular l\'esquerre, comprova que estigui encès i a punt per vincular-se."</string>
@@ -2759,8 +2761,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"És possible que algunes funcions estiguin limitades"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Major consum de bateria"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Mostra les aplicacions que més bateria utilitzen"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Càrrega limitada temporalment"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Per estalviar bateria. Obtén més informació."</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Reprèn la càrrega"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"En determinades condicions, com ara altes temperatures i llargs períodes de càrrega, pot ser que la càrrega de la bateria es limiti al <xliff:g id="PERCENT">%1$s</xliff:g> per mantenir el bon estat de la bateria.\n\nQuan finalitzin aquestes condicions, el telèfon tornarà a carregar-se de manera normal automàticament."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"En determinades condicions, com ara altes temperatures i llargs períodes de càrrega, pot ser que la càrrega de la bateria es limiti al <xliff:g id="PERCENT">%1$s</xliff:g> per mantenir el bon estat de la bateria.\n\nQuan finalitzin aquestes condicions, la tauleta tornarà a carregar-se de manera normal automàticament."</string>
@@ -2796,6 +2802,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Aquesta aplicació podrà utilitzar la bateria en segon pla, cosa que pot provocar que s\'esgoti abans del previst."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Suprimeix"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Cancel·la"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Les teves aplicacions utilitzen una quantitat normal de bateria. Si n\'utilitzen massa, el telèfon et suggerirà mesures per evitar-ho.\n\nSi tens poca bateria, sempre pots activar l\'estalvi de bateria."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Les teves aplicacions utilitzen una quantitat normal de bateria. Si n\'utilitzen massa, la tauleta et suggerirà mesures per evitar-ho.\n\nSi tens poca bateria, sempre pots activar l\'estalvi de bateria."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Les teves aplicacions utilitzen una quantitat normal de bateria. Si n\'utilitzen massa, el dispositiu et suggerirà mesures per evitar-ho.\n\nSi tens poca bateria, sempre pots activar l\'estalvi de bateria."</string>
@@ -2973,8 +2981,11 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"percentatge de bateria: <xliff:g id="PERCENT">%1$s</xliff:g>"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"Percentatge de bateria"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"Mostra el percentatge de bateria a la barra d\'estat"</string>
+    <string name="battery_usage_chart_graph_hint_last_full_charge" msgid="6570336408060566877">"Nivell de la bateria des de la darrera càrrega completa"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Nivell de bateria durant les 24 darreres hores"</string>
+    <string name="battery_app_usage" msgid="8976453608783133770">"Ús de les aplicacions des de la darrera càrrega completa"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Ús d\'aplicacions durant les 24 darreres hores"</string>
+    <string name="battery_system_usage" msgid="1395943945140097585">"Ús del sistema des de la darrera càrrega completa"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"Ús del sistema durant les 24 darreres hores"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"Ús del sistema entre <xliff:g id="SLOT">%s</xliff:g>"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"Ús d\'aplicacions entre <xliff:g id="SLOT">%s</xliff:g>"</string>
