--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -85,6 +85,8 @@
     <string name="bluetooth_empty_list_user_restricted" msgid="909734990821975673">"آپ کو بلوٹوتھ ترتیبات میں تبدیلی کرنے کی اجازت نہیں ہے۔"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"نئے آلہ کا جوڑا بنائیں"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"بلوٹوتھ"</string>
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"دائیں کان کا جوڑا بنائیں"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"بائیں کان کا جوڑا بنائیں"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"اپنے دوسرے کان کا جوڑا بنائیں"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"آپ کے بائیں کان کا سماعتی آلہ منسلک ہے۔\n\nدائیں کان کا جوڑا بنانے کے لیے، اس بات کو یقینی بنائیں کہ یہ آن ہے اور جوڑا بنانے کے لیے تیار ہے۔"</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"آپ کے دائیں کان کا سماعتی آلہ منسلک ہے۔\n\nبائیں کان کا جوڑا بنانے کے لیے، اس بات کو یقینی بنائیں کہ یہ آن ہے اور جوڑا بنانے کے لیے تیار ہے۔"</string>
@@ -2457,7 +2459,7 @@
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"رنگوں کی تقلیب استعمال کریں"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"رنگوں کی تقلیب کا شارٹ کٹ"</string>
     <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"رنگوں کی تقلیب سے اسکرینز کا ہلکا رنگ گہرا ہو جاتا ہے۔ یہ گہری اسکرینز کو ہلکے رنگ میں بھی تبدیل کرتی ہے۔"</string>
-    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"‏‎&lt;b&gt;‎یاد رکھیں‎&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt;‎ میڈیا اور تصاویر میں رنگ تبدیل ہو جائیں گے‎&lt;/li&gt; &lt;li&gt;‎ رنگوں کی تقلیب تمام ایپس پر کام کرتی ہے‎&lt;/li&gt; &lt;li&gt;‎ گہرے پس منظر کو ڈسپلے کرنے کے لیے، اس کی بجائے گہری تھیم کا استعمال کیا جا سکتا ہے‎&lt;/li&gt; &lt;/ol&gt;‎"</string>
+    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"‏‎&lt;b&gt;‎یاد رکھیں‎&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt;‎  میڈیا اور تصاویر میں رنگ تبدیل ہو جائیں گے‎&lt;/li&gt; &lt;li&gt;‎  رنگوں کی تقلیب تمام ایپس پر کام کرتی ہے‎&lt;/li&gt; &lt;li&gt;‎  گہرے پس منظر کو ڈسپلے کرنے کے لیے، اس کی بجائے گہری تھیم کا استعمال کیا جا سکتا ہے‎&lt;/li&gt; &lt;/ol&gt;‎"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"خودکار کلک (ہولڈ کا وقت)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"خودکار کلک کے بارے میں (پسنے کا وقت)"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"خود کار کلک کے بارے میں مزید جانیں (پسنے کا وقت)"</string>
@@ -2759,8 +2761,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"کچھ خصوصیات محدود ہو سکتی ہيں"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"بیٹری کا بہت زیادہ استعمال"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"سب سے زیادہ بیٹری استعمال کرنے والی ایپس دیکھیں"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"چارجنگ عارضی طور پر محدود ہے"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"آپ کی بیٹری کو محفوظ رکھنے کے لیے۔ مزید جانیں۔"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"چارج کرنا دوبارہ شروع کریں"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"بہت زیادہ درجہ حرارت اور چارجنگ کی طویل مدتوں جیسے مخصوص حالات میں، چارجنگ بیٹری کی صحت کی حفاظت میں مدد کے لیے <xliff:g id="PERCENT">%1$s</xliff:g> تک محدود ہو سکتی ہے۔\n\nان حالات کے ختم ہونے پر آپ کا فون نارمل طریقے سے خودکار طور پر چارج ہوگا۔"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"بہت زیادہ درجہ حرارت اور چارجنگ کی طویل مدتوں جیسے مخصوص حالات میں، چارجنگ بیٹری کی صحت کی حفاظت میں مدد کے لیے <xliff:g id="PERCENT">%1$s</xliff:g> تک محدود ہو سکتی ہے۔\n\nان حالات کے ختم ہونے پر آپ کا ٹیبلیٹ نارمل طریقے سے خودکار طور پر چارج ہوگا۔"</string>
@@ -2796,6 +2802,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"یہ ایپ پس منظر میں بیٹری استعمال کر سکے گی۔ آپ کی بیٹری توقع سے پہلے ختم ہو سکتی ہے۔"</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"ہٹائیں"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"منسوخ کریں"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"آپ کی ایپس حسب معمول مقدار میں بیٹری استعمال کر رہی ہیں۔ اگر ایپس بہت زیادہ بیٹری استعمال کرتی ہیں تو آپ کا فون ایسے اقدامات کی تجویز پیش کرے گا جو آپ کر سکتے ہیں۔\n\nاگر آپ کی بیٹری کم ہو رہی ہے تو آپ ہمیشہ بیٹری سیور آن کر سکتے ہیں۔"</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"آپ کی ایپس حسب معمول مقدار میں بیٹری استعمال کر رہی ہیں۔ اگر ایپس بہت زیادہ بیٹری استعمال کرتی ہیں تو آپ کا ٹیبلیٹ ایسے اقدامات کی تجویز پیش کرے گا جو آپ کر سکتے ہیں۔\n\nاگر آپ کی بیٹری کم ہو رہی ہے تو آپ ہمیشہ بیٹری سیور آن کر سکتے ہیں۔"</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"آپ کی ایپس حسب معمول مقدار میں بیٹری استعمال کر رہی ہیں۔ اگر ایپس بہت زیادہ بیٹری استعمال کرتی ہیں تو آپ کا آلہ ایسے اقدامات کی تجویز پیش کرے گا جو آپ کر سکتے ہیں۔\n\nاگر آپ کی بیٹری کم ہو رہی ہے تو آپ ہمیشہ بیٹری سیور آن کر سکتے ہیں۔"</string>
@@ -2973,8 +2981,11 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"<xliff:g id="PERCENT">%1$s</xliff:g> بیٹری پر"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"بیٹری فیصد"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"اسٹیٹس بار میں بیٹری فیصد دکھائیں"</string>
+    <string name="battery_usage_chart_graph_hint_last_full_charge" msgid="6570336408060566877">"پچھلی بار مکمل چارج کرنے کے بعد سے بیٹری لیول"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"گزشتہ 24 گھنٹے میں بیٹری لیول"</string>
+    <string name="battery_app_usage" msgid="8976453608783133770">"پچھلی بار مکمل چارج کرنے کے بعد سے ایپ کا استعمال"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"گزشتہ 24 گھنٹے میں ایپ کا استعمال"</string>
+    <string name="battery_system_usage" msgid="1395943945140097585">"پچھلی بار مکمل چارج کرنے کے بعد سے سسٹم کا استعمال"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"گزشتہ 24 گھنٹے میں سسٹم کا استعمال"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"‫<xliff:g id="SLOT">%s</xliff:g> کے لیے سسٹم کا استعمال"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"‫<xliff:g id="SLOT">%s</xliff:g> کے لیے ایپ کا استعمال"</string>
