--- a/res/values-hy/strings.xml
+++ b/res/values-hy/strings.xml
@@ -85,6 +85,8 @@
     <string name="bluetooth_empty_list_user_restricted" msgid="909734990821975673">"Դուք թույլտվություն չունեք փոխելու Bluetooth կարգավորումները:"</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Նոր սարքի զուգակցում"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Զուգակցել աջ ականջը"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Զուգակցել ձախ ականջը"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Զուգակցեք մյուս ականջը"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Ձեր ձախ լսողական սարքը զուգակցված է։\n\nԱջը զուգակցելու համար համոզվեք, որ այն միացված է և պատրաստ զուգակցման։"</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Ձեր աջ լսողական սարքը զուգակցված է։\n\nՁախը զուգակցելու համար համոզվեք, որ այն միացված է և պատրաստ զուգակցման։"</string>
@@ -616,7 +618,7 @@
     <string name="fingerprint_last_delete_title" msgid="4081475675646514726">"Հեռացնե՞լ բոլոր մատնահետքերը"</string>
     <string name="fingerprint_delete_title" msgid="1469865327307917858">"Հեռացնե՞լ <xliff:g id="FINGERPRINT_ID">%1$s</xliff:g> մատնահետքը"</string>
     <string name="fingerprint_delete_message" msgid="1454995433333496541">"Ջնջե՞լ այս մատնահետքը։"</string>
-    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» մատնահետքի հետ կապված պատկերներն ու նմուշը, որոնք պահված են ձեր սարքում, կջնջվեն"</string>
+    <string name="fingerprint_v2_delete_message" msgid="4136720729608391131">"«<xliff:g id="FINGERPRINT_ID">%1$s</xliff:g>» մատնահետքի պատկերներն ու նմուշը, որոնք պահված են ձեր սարքում, կջնջվեն"</string>
     <string name="fingerprint_last_delete_message" msgid="7860374760549404410">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ հեռախոսն ապակողպելու կամ հավելվածներում ձեր ինքնությունը հաստատելու համար։"</string>
     <string name="fingerprint_last_delete_message_profile_challenge" msgid="4104208067277655068">"Դուք չեք կարողանա օգտագործել ձեր մատնահետքը՝ աշխատանքային պրոֆիլն ապակողպելու, գնումները հաստատելու կամ աշխատանքային հավելվածներ մուտք գործելու համար։"</string>
     <string name="fingerprint_last_delete_confirm" msgid="3294910995598819259">"Այո, հեռացնել"</string>
@@ -2759,8 +2761,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Որոշ գործառույթներ կարող են պատշաճ չաշխատել"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Մարտկոցի լիցքի բարձր ծախսում"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Տեսեք, թե որ հավելվածներն են ամենաշատը օգտագործում մարտկոցի լիցքը"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Լիցքավորումը ժամանակավորապես սահմանափակված է"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Մարտկոցի կյանքը երկարացնելու համար։ Իմանալ ավելին։"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Վերսկսել լիցքավորումը"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Որոշակի պայմաններում, օրինակ՝ բարձր ջերմաստիճանի կամ երկար լիցքավորման դեպքում, համակարգը կարող է սահմանափակել լիցքավորումը <xliff:g id="PERCENT">%1$s</xliff:g>-ով՝ մարտկոցի ծառայության ժամկետը երկարացնելու համար։\n\nԵրբ պայմանները կարգավորվեն, հեռախոսն ավտոմատ կերպով կլիցքավորվի սովորական եղանակով։"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Որոշակի պայմաններում, օրինակ՝ բարձր ջերմաստիճանի կամ երկար լիցքավորման դեպքում, համակարգը կարող է սահմանափակել լիցքավորումը <xliff:g id="PERCENT">%1$s</xliff:g>-ով՝ մարտկոցի ծառայության ժամկետը երկարացնելու համար։\n\nԵրբ պայմանները կարգավորվեն, պլանշետն ավտոմատ կերպով կլիցքավորվի սովորական եղանակով։"</string>
@@ -2796,6 +2802,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Այս հավելվածը կկարողանա օգտագործել մարտկոցը ֆոնային ռեժիմում, ինչի պատճառով դրա լիցքը կարող է ավելի շուտ սպառվել:"</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Ջնջել"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Չեղարկել"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Ձեր հավելվածները մարտկոցի լիցքն օգտագործում են սովորական ծավալով։ Եթե դրանք չափից շատ սպառեն մարտկոցի լիցքը, հեռախոսը ձեզ կառաջարկի համապատասխան գործողություններ ձեռնարկել։\n\nԴուք ցանկացած ժամանակ կարող եք միացնել մարտկոցի տնտեսման ռեժիմը։"</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Ձեր հավելվածները մարտկոցի լիցքն օգտագործում են սովորական ծավալով։ Եթե դրանք չափից շատ սպառեն մարտկոցի լիցքը, պլանշետը ձեզ կառաջարկի համապատասխան գործողություններ ձեռնարկել։\n\nԴուք ցանկացած ժամանակ կարող եք միացնել մարտկոցի տնտեսման ռեժիմը։"</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Ձեր հավելվածները մարտկոցի լիցքն օգտագործում են սովորական ծավալով։ Եթե դրանք չափից շատ սպառեն մարտկոցի լիցքը, սարքը ձեզ կառաջարկի համապատասխան գործողություններ ձեռնարկել։\n\nԴուք ցանկացած ժամանակ կարող եք միացնել մարտկոցի տնտեսման ռեժիմը։"</string>
@@ -2973,8 +2981,11 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"մատկոցի <xliff:g id="PERCENT">%1$s</xliff:g> լիցքի դեպքում"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"Մարտկոցի լիցքը"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"Մարտկոցի տոկոսը ցուցադրել կարգավիճակի գոտում"</string>
+    <string name="battery_usage_chart_graph_hint_last_full_charge" msgid="6570336408060566877">"Մարտկոցի լիցքի մակարդակը վերջին լրիվ լիցքավորումից հետո"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Մարտկոցի լիցքի մակարդակը վերջին 24 ժամվա ընթացքում"</string>
+    <string name="battery_app_usage" msgid="8976453608783133770">"Հավելվածի օգտագործումը վերջին լրիվ լիցքավորումից հետո"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Հավելվածների կողմից մարտկոցի օգտագործումը վերջին 24 ժամվա ընթացքում"</string>
+    <string name="battery_system_usage" msgid="1395943945140097585">"Համակարգի օգտագործումը վերջին լրիվ լիցքավորումից հետո"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"Համակարգի կողմից մարտկոցի օգտագործումը վերջին 24 ժամվա ընթացքում"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"Համակարգի կողմից մարտկոցի օգտագործումը (<xliff:g id="SLOT">%s</xliff:g>)"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"Հավելվածների կողմից մարտկոցի օգտագործումը (<xliff:g id="SLOT">%s</xliff:g>)"</string>
@@ -5143,7 +5154,7 @@
     <string name="storage_videos" msgid="6117698226447251033">"Տեսանյութեր"</string>
     <string name="storage_audio" msgid="5994664984472140386">"Աուդիո"</string>
     <string name="storage_apps" msgid="3564291603258795216">"Հավելվածներ"</string>
-    <string name="storage_documents_and_other" msgid="3293689243732236480">"Փաստաթղթեր և այլ նյութեր"</string>
+    <string name="storage_documents_and_other" msgid="3293689243732236480">"Փաստաթղթեր և այլ ֆայլեր"</string>
     <string name="storage_system" msgid="8472410119822911844">"Համակարգ"</string>
     <string name="storage_trash" msgid="2807138998886084856">"Աղբարկղ"</string>
     <string name="storage_trash_dialog_title" msgid="2296169576049935200">"Դատարկե՞լ աղբարկղը"</string>
