--- a/res/values-mn/strings.xml
+++ b/res/values-mn/strings.xml
@@ -85,6 +85,8 @@
     <string name="bluetooth_empty_list_user_restricted" msgid="909734990821975673">"Танд Bluetooth тохиргоог өөрчлөх зөвшөөрөл байхгүй байна."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Шинэ төхөөрөмж холбох"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"bluetooth"</string>
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Баруун чих хослуулах"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Зүүн чих хослуулах"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Нөгөө чихээ хослуулах"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Таны зүүн чихний сонсголын төхөөрөмж холбогдсон байна.\n\nБаруун чихний төхөөрөмжийг хослуулахын тулд түүнийг асаасан бөгөөд хослуулахад бэлэн эсэхийг шалгана уу."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Таны баруун чихний сонсголын төхөөрөмж холбогдсон байна.\n\nЗүүн чихний төхөөрөмжийг хослуулахын тулд түүнийг асаасан бөгөөд хослуулахад бэлэн эсэхийг шалгана уу."</string>
@@ -147,7 +149,7 @@
     <string name="bluetooth_pref_summary" product="tablet" msgid="3506962706611366830">"Таблетдаа ойролцоох Bluetooth төхөөрөмжүүдэд холбогдохыг зөвшөөрөх"</string>
     <string name="bluetooth_pref_summary" product="device" msgid="2192027516577675587">"Төхөөрөмждөө ойролцоох Bluetooth төхөөрөмжүүдэд холбогдохыг зөвшөөрөх"</string>
     <string name="bluetooth_pref_summary" product="default" msgid="768958961865499804">"Утсандаа ойролцоох Bluetooth төхөөрөмжүүдэд холбогдохыг зөвшөөрөх"</string>
-    <string name="bluetooth_disable_a2dp_hw_offload" msgid="5942913792817797541">"Bluetooth A2DP техник хангамжийн хурдасгуурыг идэвхгүй болгох"</string>
+    <string name="bluetooth_disable_a2dp_hw_offload" msgid="5942913792817797541">"Bluetooth A2DP техник хангамжийн шилжүүлэлтийг идэвхгүй болгох"</string>
     <string name="bluetooth_disable_le_audio_hw_offload" msgid="4656853795514691257">"Bluetooth LE аудионы техник хангамжийн шилжүүлэлтийг идэвхгүй болгох"</string>
     <string name="bluetooth_disable_hw_offload_dialog_title" msgid="6001142380445276918">"Төхөөрөмжийг дахин эхлүүлэх үү?"</string>
     <string name="bluetooth_disable_hw_offload_dialog_message" msgid="1524373895333698779">"Та энэ тохиргоог өөрчлөхийн тулд төхөөрөмжөө дахин эхлүүлэх шаардлагатай."</string>
@@ -2455,9 +2457,9 @@
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"Удаан дарах саатал"</string>
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"Өнгө хувиргалт"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"Өнгө хувиргалтыг ашиглах"</string>
-    <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Өнгө урвуулах товчлол"</string>
-    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"Өнгө урвуулах онцлог нь цайвар дэлгэцийг бараан болгоно. Энэ нь мөн бараан дэлгэцийг цайвар болгоно."</string>
-    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Анхаарна уу&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Медиа болон зураг дахь өнгөнүүд өөрчлөгдөнө&lt;/li&gt; &lt;li&gt; Өнгө урвуулах онцлог нь бүх апп дээр ажиллана&lt;/li&gt; &lt;li&gt; Бараан дэвсгэрийг үзүүлэхийн тулд оронд нь Бараан загварыг ашиглах боломжтой&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"Өнгө хувиргалтын товчлол"</string>
+    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"Өнгө хувиргалт онцлог нь цайвар дэлгэцийг бараан болгоно. Энэ нь мөн бараан дэлгэцийг цайвар болгоно."</string>
+    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;Анхаарна уу&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; Медиа болон зураг дахь өнгөнүүд өөрчлөгдөнө&lt;/li&gt; &lt;li&gt; Өнгө хувиргалт онцлог нь бүх апп дээр ажиллана&lt;/li&gt; &lt;li&gt; Бараан дэвсгэрийг үзүүлэхийн тулд оронд нь Бараан загварыг ашиглах боломжтой&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"Автомат товшилт (тодорхой хугацаатай)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"Автомат товшилтын талаар (тодорхой хугацаа)"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"Автомат товшилтын талаар нэмэлт мэдээлэл авах (тодорхой хугацаа)"</string>
@@ -2492,10 +2494,10 @@
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>-г нээх"</string>
     <string name="accessibility_service_auto_added_qs_tooltip_content" msgid="2941824314912928072">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>-г Шуурхай тохиргоонд нэмсэн. Хүссэн үедээ үүнийг асаах эсвэл унтраахын тулд доош шударна уу."</string>
     <string name="accessibility_service_qs_tooltip_content" msgid="6002493441414967868">"Та мөн <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>-г Шуурхай тохиргоонд дэлгэцийнхээ дээд хэсгээс нэмэх боломжтой"</string>
-    <string name="accessibility_color_correction_auto_added_qs_tooltip_content" msgid="9092661358437404374">"Өнгөний засварыг Шуурхай тохиргоонд нэмсэн. Хүссэн үедээ үүнийг асаах эсвэл унтраахын тулд доош шударна уу."</string>
-    <string name="accessibility_color_correction_qs_tooltip_content" msgid="3258628434235475205">"Та мөн өнгөний засварыг Шуурхай тохиргоонд дэлгэцийнхээ дээд хэсгээс нэмэх боломжтой"</string>
-    <string name="accessibility_color_inversion_auto_added_qs_tooltip_content" msgid="7267618234972101725">"Өнгө урвуулахыг Шуурхай тохиргоонд нэмсэн. Хүссэн үедээ үүнийг асаах эсвэл унтраахын тулд доош шударна уу."</string>
-    <string name="accessibility_color_inversion_qs_tooltip_content" msgid="5046332142185711869">"Та мөн өнгө урвуулахыг Шуурхай тохиргоонд дэлгэцийнхээ дээд хэсгээс нэмэх боломжтой"</string>
+    <string name="accessibility_color_correction_auto_added_qs_tooltip_content" msgid="9092661358437404374">"Өнгө тохируулгыг Шуурхай тохиргоонд нэмсэн. Хүссэн үедээ үүнийг асаах эсвэл унтраахын тулд доош шударна уу."</string>
+    <string name="accessibility_color_correction_qs_tooltip_content" msgid="3258628434235475205">"Та мөн өнгө тохируулгыг Шуурхай тохиргоонд дэлгэцийнхээ дээд хэсгээс нэмэх боломжтой"</string>
+    <string name="accessibility_color_inversion_auto_added_qs_tooltip_content" msgid="7267618234972101725">"Өнгө хувиргалтыг Шуурхай тохиргоонд нэмсэн. Хүссэн үедээ үүнийг асаах эсвэл унтраахын тулд доош шударна уу."</string>
+    <string name="accessibility_color_inversion_qs_tooltip_content" msgid="5046332142185711869">"Та мөн өнгө хувиргалтыг Шуурхай тохиргоонд дэлгэцийнхээ дээд хэсгээс нэмэх боломжтой"</string>
     <string name="accessibility_reduce_bright_colors_auto_added_qs_tooltip_content" msgid="1906588335786328512">"Хэт бүүдгэрийг Шуурхай тохиргоонд нэмсэн. Хүссэн үедээ үүнийг асаах эсвэл унтраахын тулд доош шударна уу."</string>
     <string name="accessibility_reduce_bright_colors_qs_tooltip_content" msgid="7522121299176176785">"Та мөн хэт бүүдгэрийг Шуурхай тохиргоонд дэлгэцийнхээ дээд хэсгээс нэмэх боломжтой"</string>
     <string name="accessibility_one_handed_mode_auto_added_qs_tooltip_content" msgid="7914554254280416532">"Нэг гарын горимыг Шуурхай тохиргоонд нэмсэн. Хүссэн үедээ үүнийг асаах эсвэл унтраахын тулд доош шударна уу."</string>
@@ -2503,12 +2505,12 @@
     <string name="accessibility_quick_settings_tooltip_dismiss" msgid="3269120277643884190">"Үл хэрэгсэх"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"Таны утсан дээр өнгийг хэрхэн үзүүлэхийг тохируулна уу"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"Таны таблет дээр өнгийг хэрхэн үзүүлэхийг тохируулна уу"</string>
-    <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Өнгөний засварыг ашиглах"</string>
-    <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"Өнгөний засварын товчлол"</string>
-    <string name="accessibility_daltonizer_about_title" msgid="6063650804116981287">"Өнгөний засварын тухай"</string>
-    <string name="accessibility_daltonizer_footer_learn_more_content_description" msgid="2091679253892040910">"Өнгөний засварын тухай нэмэлт мэдээлэл авах"</string>
-    <string name="accessibility_color_inversion_about_title" msgid="8275754480247040136">"Өнгө урвуулах тухай"</string>
-    <string name="accessibility_color_inversion_footer_learn_more_content_description" msgid="5382579548498952445">"Өнгө урвуулах тухай нэмэлт мэдээлэл авах"</string>
+    <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"Өнгө тохируулга ашиглах"</string>
+    <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"Өнгө тохируулгын товчлол"</string>
+    <string name="accessibility_daltonizer_about_title" msgid="6063650804116981287">"Өнгө тохируулгын тухай"</string>
+    <string name="accessibility_daltonizer_footer_learn_more_content_description" msgid="2091679253892040910">"Өнгө тохируулгын тухай нэмэлт мэдээлэл авах"</string>
+    <string name="accessibility_color_inversion_about_title" msgid="8275754480247040136">"Өнгө хувиргалтын тухай"</string>
+    <string name="accessibility_color_inversion_footer_learn_more_content_description" msgid="5382579548498952445">"Өнгө хувиргалтын тухай нэмэлт мэдээлэл авах"</string>
     <string name="accessibility_caption_primary_switch_title" msgid="8901149325574757370">"Тайлбарыг харуулах"</string>
     <string name="accessibility_caption_primary_switch_summary" msgid="2754071646412717674">"Зөвхөн дэмждэг аппад"</string>
     <string name="captioning_caption_appearance_title" msgid="4501313548541670063">"Тайлбарын үсгийн хэмжээ, загвар"</string>
@@ -2759,8 +2761,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Зарим онцлогийг хязгаарласан байж болзошгүй"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Батарейн өндөр ашиглалт"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Хамгийн өндөр ашиглалттай аппуудыг харна уу"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Цэнэглэхийг түр зуур хязгаарласан"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Батарейгаа хэмнэхийн тулд. Нэмэлт мэдээлэл авна уу."</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Цэнэглэхийг үргэлжлүүлэх"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Өндөр температур болон удаан цэнэглэх хугацаа зэрэг тодорхой нөхцөлд цэнэглэлтийг батарейн барилтыг хадгалахын тулд <xliff:g id="PERCENT">%1$s</xliff:g>-д хязгаарласан байж магадгүй.\n\nЭдгээр нөхцөл дуусах үед таны утсыг автоматаар хэвийн байдлаар цэнэглэнэ."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Өндөр температур болон удаан цэнэглэх хугацаа зэрэг тодорхой нөхцөлд цэнэглэлтийг батарейн барилтыг хадгалахын тулд <xliff:g id="PERCENT">%1$s</xliff:g>-д хязгаарласан байж магадгүй.\n\nЭдгээр нөхцөл дуусах үед таны таблетыг автоматаар хэвийн байдлаар цэнэглэнэ."</string>
@@ -2796,6 +2802,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Энэ апп батарейг цаана ашиглах боломжтой болно. Таны батарей тооцоолж байснаас хурдан дуусаж болзошгүй."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Устгах"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Цуцлах"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Таны апп хэвийн хэмжээний батарей ашиглаж байна. Хэрэв апп хэт их батарей ашиглаж байвал таны утас танд авах боломжтой алхмуудыг санал болгоно.\n\nХэрэв таны батарей дуусах гэж байвал та Батарей хэмнэгчийг хүссэн үедээ асаах боломжтой."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Таны апп хэвийн хэмжээний батарей ашиглаж байна. Хэрэв апп хэт их батарей ашиглаж байвал таны таблет танд авах боломжтой алхмуудыг санал болгоно.\n\nХэрэв таны батарей дуусах гэж байвал та Батарей хэмнэгчийг хүссэн үедээ асаах боломжтой."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Таны апп хэвийн хэмжээний батарей ашиглаж байна. Хэрэв апп хэт их батарей ашиглаж байвал таны төхөөрөмж танд авах боломжтой алхмуудыг санал болгоно.\n\nХэрэв таны батарей дуусах гэж байвал та Батарей хэмнэгчийг хүссэн үедээ асаах боломжтой."</string>
@@ -2973,8 +2981,11 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"батарей <xliff:g id="PERCENT">%1$s</xliff:g> болоход"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"Батарейн хувь"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"Батарейн хувийг статус самбарт харуулах"</string>
+    <string name="battery_usage_chart_graph_hint_last_full_charge" msgid="6570336408060566877">"Сүүлд бүрэн цэнэглэснээс хойших батарейн түвшин"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Өнгөрсөн 24 цагийн батарейн түвшин"</string>
+    <string name="battery_app_usage" msgid="8976453608783133770">"Сүүлд бүрэн цэнэглэснээс хойших апп ашиглалт"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Өнгөрсөн 24 цагийн аппын ашиглалт"</string>
+    <string name="battery_system_usage" msgid="1395943945140097585">"Сүүлд бүрэн цэнэглэснээс хойших системийн ашиглалт"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"Өнгөрсөн 24 цагийн системийн ашиглалт"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"<xliff:g id="SLOT">%s</xliff:g>-н системийн ашиглалт"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"<xliff:g id="SLOT">%s</xliff:g>-н аппын ашиглалт"</string>
@@ -4437,8 +4448,8 @@
       <item quantity="other">Ашиглаагүй <xliff:g id="COUNT_1">%d</xliff:g> апп</item>
       <item quantity="one">Ашиглаагүй <xliff:g id="COUNT_0">%d</xliff:g> апп</item>
     </plurals>
-    <string name="unused_apps_category" msgid="8954930958175500851">"Хэрэглээгүй аппын тохиргоо"</string>
-    <string name="unused_apps_switch" msgid="7595419855882245772">"Ашигладаггүй бол аппын үйл ажиллагааг түр зогсоох"</string>
+    <string name="unused_apps_category" msgid="8954930958175500851">"Ашиглаагүй аппын тохиргоо"</string>
+    <string name="unused_apps_switch" msgid="7595419855882245772">"Ашиглаагүй бол аппын үйл ажиллагааг түр зогсоох"</string>
     <string name="unused_apps_switch_summary" msgid="2171098908014596802">"Зөвшөөрлийг хасаж, түр зуурын файлыг устгаж мөн мэдэгдлийг зогсооно"</string>
     <string name="filter_all_apps" msgid="6645539744080251371">"Бүх апп"</string>
     <string name="filter_enabled_apps" msgid="8868356616126759124">"Суулгасан апп"</string>
