--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -85,6 +85,8 @@
     <string name="bluetooth_empty_list_user_restricted" msgid="909734990821975673">"Du har ikke tillatelse til å endre Bluetooth-innstillingene."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Koble til en ny enhet"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"Bluetooth"</string>
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Tilkoble høyre øre"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Tilkoble venstre øre"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Tilkoble det andre øret"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Det venstre høreapparatet ditt er tilkoblet.\n\nFor å koble til det høyre høreapparatet må du sørge for at det er slått på og klart til å koble til."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Det høyre høreapparatet ditt er tilkoblet.\n\nFor å koble til det venstre høreapparatet må du sørge for at det er slått på og klart til å koble til."</string>
@@ -954,12 +956,12 @@
     <string name="nfc_disabled_summary" msgid="8737797364522502351">"Utilgjengelig fordi NFC er slått av"</string>
     <string name="android_beam_label" msgid="7168565080321110094">"Android Beam"</string>
     <string name="android_beam_explained" msgid="5684416131846701256">"Når denne funksjonen er slått på, kan du beame appinnhold til en annen enhet som støtter nærfeltskommunikasjon (NFC). Du gjør dette ved å holde enhetene tett sammen. Du kan for eksempel beame nettsider, YouTube-videoer, kontakter med mer.\n\nDu holder bare enhetene mot hverandre (vanligvis rygg mot rygg) og trykker på skjermen. Appen avgjør hva som beames."</string>
-    <string name="wifi_quick_toggle_title" msgid="2737097538432862807">"Wi-Fi"</string>
+    <string name="wifi_quick_toggle_title" msgid="2737097538432862807">"Wifi"</string>
     <string name="wifi_quick_toggle_summary" msgid="4957267477820468553">"Slå på Wi-Fi"</string>
-    <string name="wifi_settings" msgid="8313301946393559700">"Wi-Fi"</string>
+    <string name="wifi_settings" msgid="8313301946393559700">"Wifi"</string>
     <string name="wifi_settings_primary_switch_title" msgid="628360786662947258">"Bruk Wi-Fi"</string>
     <string name="wifi_settings_category" msgid="3523464780563778321">"Innstillinger for Wi-Fi"</string>
-    <string name="wifi_settings_title" msgid="3879649725059512799">"Wi-Fi"</string>
+    <string name="wifi_settings_title" msgid="3879649725059512799">"Wifi"</string>
     <string name="wifi_settings_summary" msgid="784074686763572811">"Sett opp og styr trådløse aksesspunkt"</string>
     <string name="wifi_select_network" msgid="6692897876718813259">"Velg Wi-Fi-nettverk"</string>
     <string name="wifi_starting" msgid="6147022683967506341">"Slår på Wi-Fi …"</string>
@@ -1245,12 +1247,12 @@
     <skip />
     <string name="wifi_calling_roaming_mode_dialog_title" msgid="5382466713784067077">"Roaming-innstilling"</string>
   <string-array name="wifi_calling_mode_choices_v2">
-    <item msgid="6052353275413974742">"Wi-Fi"</item>
+    <item msgid="6052353275413974742">"Wifi"</item>
     <item msgid="8622872038388687383">"Mobil"</item>
     <item msgid="3027927219952052398">"Bare Wi-Fi"</item>
   </string-array>
   <string-array name="wifi_calling_mode_choices_v2_without_wifi_only">
-    <item msgid="588620799769664461">"Wi-Fi"</item>
+    <item msgid="588620799769664461">"Wifi"</item>
     <item msgid="7566603075659706590">"Mobil"</item>
   </string-array>
     <string name="wifi_calling_mode_wifi_preferred_summary" msgid="3240387177966098351">"Bruk mobilnettverk hvis Wi-Fi er utilgjengelig"</string>
@@ -2727,7 +2729,7 @@
     <string name="battery_stats_gps_on_label" msgid="5626424078405382686">"GPS på"</string>
     <string name="battery_stats_camera_on_label" msgid="555635201416769359">"Kameraet er på"</string>
     <string name="battery_stats_flashlight_on_label" msgid="1621027969559427783">"Lommelykten er på"</string>
-    <string name="battery_stats_wifi_running_label" msgid="6461551370010379049">"Wi-Fi"</string>
+    <string name="battery_stats_wifi_running_label" msgid="6461551370010379049">"Wifi"</string>
     <string name="battery_stats_wake_lock_label" msgid="8115041205778441548">"Aktiv"</string>
     <string name="battery_stats_phone_signal_label" msgid="679649411998679555">"Mobilnettverkets signal"</string>
     <!-- no translation found for battery_stats_last_duration (3088100394725340600) -->
@@ -2759,8 +2761,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Noen funksjoner kan være begrenset"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Høyere batteribruk"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Se appene med høyest batteribruk"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Lading er midlertidig begrenset"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"For å forlenge batterilevetiden. Finn ut mer."</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Gjenoppta ladingen"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Under visse omstendigheter, for eksempel høye temperaturer og lange ladetider, kan ladingen begrenses til <xliff:g id="PERCENT">%1$s</xliff:g> for å bevare batteriet.\n\nNår slike omstendigheter er over, gjenopptar telefonen automatisk normal lading."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Under visse omstendigheter, for eksempel høye temperaturer og lange ladetider, kan ladingen begrenses til <xliff:g id="PERCENT">%1$s</xliff:g> for å bevare batteriet.\n\nNår slike omstendigheter er over, gjenopptar telefonen automatisk normal lading."</string>
@@ -2796,6 +2802,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Denne appen kan bruke batteri i bakgrunnen. Batteriet kan gå tomt raskere enn forventet."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Fjern"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Avbryt"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Appene bruker en normal batterimengde. Hvis apper bruker for mye batteri, får du forslag om hva du kan gjøre.\n\nDu kan når som helst slå på batterisparing hvis du har lite batteri."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Appene bruker en normal batterimengde. Hvis apper bruker for mye batteri, får du forslag om hva du kan gjøre.\n\nDu kan når som helst slå på batterisparing hvis du har lite batteri."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Appene bruker en normal batterimengde. Hvis apper bruker for mye batteri, får du forslag om hva du kan gjøre.\n\nDu kan når som helst slå på batterisparing hvis du har lite batteri."</string>
@@ -2844,7 +2852,7 @@
     <string name="power_screen" msgid="4596900105850963806">"Skjerm"</string>
     <string name="power_flashlight" msgid="8993388636332573202">"Lommelykt"</string>
     <string name="power_camera" msgid="4778315081581293923">"Kamera"</string>
-    <string name="power_wifi" msgid="4614007837288250325">"Wi-Fi"</string>
+    <string name="power_wifi" msgid="4614007837288250325">"Wifi"</string>
     <string name="power_bluetooth" msgid="5085900180846238196">"Bluetooth"</string>
     <string name="power_cell" msgid="7793805106954398186">"Mobilnettverk"</string>
     <string name="power_phone" msgid="2768396619208561670">"Telefonsamtaler"</string>
@@ -2973,8 +2981,11 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"med <xliff:g id="PERCENT">%1$s</xliff:g> batteri"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"Batteriprosent"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"Vis batteriprosenten i statusfeltet"</string>
+    <string name="battery_usage_chart_graph_hint_last_full_charge" msgid="6570336408060566877">"Batterinivå siden sist batteriet var fulladet"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Batterinivå de siste 24 timene"</string>
+    <string name="battery_app_usage" msgid="8976453608783133770">"Appbruk siden sist batteriet var fulladet"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Appbruk de siste 24 timene"</string>
+    <string name="battery_system_usage" msgid="1395943945140097585">"Systembruk siden sist batteriet var fulladet"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"Systembruk de siste 24 timene"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"Systembruk for <xliff:g id="SLOT">%s</xliff:g>"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"Appbruk for <xliff:g id="SLOT">%s</xliff:g>"</string>
@@ -3229,7 +3240,7 @@
     <string name="data_usage_disable_4g_limit" msgid="3084868504051520840">"Angi datagrense for 4G"</string>
     <string name="data_usage_disable_3g_limit" msgid="8867555130268898044">"Angi datagrense for 2G/3G"</string>
     <string name="data_usage_disable_wifi_limit" msgid="7222459951785404241">"Angi datagrense for Wi-Fi"</string>
-    <string name="data_usage_tab_wifi" msgid="801667863336456787">"Wi-Fi"</string>
+    <string name="data_usage_tab_wifi" msgid="801667863336456787">"Wifi"</string>
     <string name="data_usage_tab_ethernet" msgid="2951873059375493878">"Ethernet"</string>
     <string name="data_usage_tab_mobile" msgid="952231704205870928">"Mobil"</string>
     <string name="data_usage_tab_4g" msgid="3265237821331861756">"4G"</string>
@@ -4764,7 +4775,7 @@
     <string name="wifi_data_usage" msgid="6868503699134605707">"Wi-Fi-databruk"</string>
     <string name="non_carrier_data_usage" msgid="6494603202578414755">"Databruk utenfor operatøren"</string>
     <string name="ethernet_data_usage" msgid="4552227880905679761">"Ethernet-databruk"</string>
-    <string name="wifi" msgid="2932584495223243842">"Wi-Fi"</string>
+    <string name="wifi" msgid="2932584495223243842">"Wifi"</string>
     <string name="ethernet" msgid="4665162609974492983">"Ethernet"</string>
     <string name="cell_data_template" msgid="6077963976103260821">"<xliff:g id="AMOUNT">^1</xliff:g> mobildata"</string>
     <string name="wifi_data_template" msgid="935934798340307438">"<xliff:g id="AMOUNT">^1</xliff:g> Wi-Fi-data"</string>
