--- a/res/values-zu/strings.xml
+++ b/res/values-zu/strings.xml
@@ -85,6 +85,8 @@
     <string name="bluetooth_empty_list_user_restricted" msgid="909734990821975673">"Awunayo imvume yokushintsha izilungiselelo ze-Bluetooth."</string>
     <string name="bluetooth_pairing_pref_title" msgid="3497193027590444598">"Bhangqa idivayisi entsha"</string>
     <string name="keywords_add_bt_device" msgid="4533191164203174011">"i-bluetooth"</string>
+    <string name="bluetooth_pair_right_ear_button" msgid="3979894494803078852">"Bhangqa indlebe engakwesokudla"</string>
+    <string name="bluetooth_pair_left_ear_button" msgid="1019938875726073791">"Bhangqa indlebe engakwesokunxele"</string>
     <string name="bluetooth_pair_other_ear_dialog_title" msgid="3814943511999984012">"Bhangqa enye indlebe yakho"</string>
     <string name="bluetooth_pair_other_ear_dialog_left_ear_message" msgid="7936892941892347102">"Umshini wakho wendlebe ongakwesokunxele uxhunyiwe.\n\nUkuze ubhangqe ongakwesokudla, qiniseka ukuthi uvuliwe futhi ukulungele ukubhangqa."</string>
     <string name="bluetooth_pair_other_ear_dialog_right_ear_message" msgid="8242208936062915941">"Umshini wakho wendlebe ongakwesokudla uxhunyiwe.\n\nUkuze ubhangqe ongakwesokunxele, qiniseka ukuthi uvuliwe futhi ukulungele ukubhangqa."</string>
@@ -2760,8 +2762,12 @@
     <string name="battery_tip_early_heads_up_done_summary" msgid="7858923105760361208">"Ezinye izici zingakhawulelwa"</string>
     <string name="battery_tip_high_usage_title" msgid="9110720762506146697">"Ukusetshenziswa kakhulu kwebhethri"</string>
     <string name="battery_tip_high_usage_summary" msgid="3938999581403084551">"Bona ama-app asetshenziswa kakhulu"</string>
-    <string name="battery_tip_limited_temporarily_title" msgid="5231061779363606924">"Ukushaja kukhawulelwe okwesikhashana"</string>
-    <string name="battery_tip_limited_temporarily_summary" msgid="8504402301403419444">"Ukonga ibhethri yakho. Funda kabanzi"</string>
+    <!-- no translation found for battery_tip_limited_temporarily_title (5962767837251276527) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_summary (4236185146380247801) -->
+    <skip />
+    <!-- no translation found for battery_tip_limited_temporarily_extra_summary (8876637325622106400) -->
+    <skip />
     <string name="battery_tip_limited_temporarily_dialog_resume_charge" msgid="2302295458913832342">"Qalisa kabusha ukukhokhisa"</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="default" msgid="8125639486214812735">"Ezimweni ezithile, njengamazinga okushisa aphezulu nezikhathi ezinde zokushaja, ukushaja kungakhawulelwa ku-<xliff:g id="PERCENT">%1$s</xliff:g> ukusiza ukonga impilo yebhethri.\n\nLapho lezo zimo ziphela, ifoni yakho izokhokhiswa ngokuzenzakalelayo ngokujwayelekile."</string>
     <string name="battery_tip_limited_temporarily_dialog_msg" product="tablet" msgid="3890877885222574553">"Ezimweni ezithile, njengamazinga okushisa aphezulu nezikhathi ezinde zokushaja, ukushaja kungakhawulelwa ku-<xliff:g id="PERCENT">%1$s</xliff:g> ukusiza ukonga impilo yebhethri.\n\nLapho lezo zimo ziphela, ithebhulethi yakho izokhokhiswa ngokuzenzakalelayo ngokujwayelekile."</string>
@@ -2797,6 +2803,8 @@
     <string name="battery_tip_unrestrict_app_dialog_message" msgid="215449637818582819">"Lolu hlelo lokusebenza luzokwazi ukusebenzisa ibhethri ngemuva. Ibhethri lakho lingaphela ngokushesha kunokulindelekile."</string>
     <string name="battery_tip_unrestrict_app_dialog_ok" msgid="7940183167721998470">"Susa"</string>
     <string name="battery_tip_unrestrict_app_dialog_cancel" msgid="4968135709160207507">"Khansela"</string>
+    <!-- no translation found for battery_tip_charge_to_full_button (6701709034348116261) -->
+    <skip />
     <string name="battery_tip_dialog_summary_message" product="default" msgid="6097167058237891756">"Izinhlelo zakho zokusebenza zisebenzisa inani elivamile lebhethri. Uma izinhlelo zokusebenza zisebenzisa ibhethri eliningi, ifoni yakho izophakamisa izenzo ongazenza.\n\nUngahlala uvula isilondolozi sebhethri uma uphelelwa ibethri."</string>
     <string name="battery_tip_dialog_summary_message" product="tablet" msgid="573297655597451123">"Izinhlelo zakho zokusebenza zisebenzisa inani elivamile lebhethri. Uma izinhlelo zokusebenza zisebenzisa ibhethri eliningi, idivayisi yakho izophakamisa izenzo ongazenza.\n\nUngahlala uvula isilondolozi sebhethri uma uphelelwa ibethri."</string>
     <string name="battery_tip_dialog_summary_message" product="device" msgid="8222461068860745749">"Izinhlelo zakho zokusebenza zisebenzisa inani elivamile lebhethri. Uma izinhlelo zokusebenza zisebenzisa ibhethri eliningi, idivayisi yakho izophakamisa izenzo ongazenza.\n\nUngahlala uvula isilondolozi sebhethri uma uphelelwa ibethri."</string>
@@ -2974,8 +2982,11 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"kokungu-<xliff:g id="PERCENT">%1$s</xliff:g> kubhethri"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"Amaphesenti ebhethri"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"Bonisa amaphesenti ebhethri kubha yesimo"</string>
+    <string name="battery_usage_chart_graph_hint_last_full_charge" msgid="6570336408060566877">"Ileveli yebhethri ukusukela ekushajweni kokugcina okugcwele"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Ileveli yebhethri emahoreni angama-24 adlule"</string>
+    <string name="battery_app_usage" msgid="8976453608783133770">"Ukusetshenziswa kwe-app ukusukela ekushajweni kokugcina okugcwele"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Ukusetshenziswa kwe-app emahoreni angama-24 adlule"</string>
+    <string name="battery_system_usage" msgid="1395943945140097585">"Ukusetshenziswa kwesistimu ukusukela ekushajweni kokugcina okugcwele"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"Ukusetshenziswa kwesistimu emahoreni angama-24 adlule"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"Ukusetshenziswa kwesistimu nge-<xliff:g id="SLOT">%s</xliff:g>"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"Ukusetshenziswa kwe-app nge-<xliff:g id="SLOT">%s</xliff:g>"</string>
